lab_8/v1/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiamat-fastapi-nginx-app-deployment
  labels:
    app: tiamat-fastapi-nginx-app
    pathType: ImplementationSpecific
    environment: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tiamat-fastapi-nginx-app
      environment: development
  template:
    metadata:
      labels:
        app: tiamat-fastapi-nginx-app
        environment: development
    spec:
      containers:
      - name: nginx
        image: registry.digitalocean.com/tiamat/tiamat-fastapi-nginx:v2.0.4.mongo
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "80Mi"
            cpu: "100m"
          limits:
            memory: "160Mi"
            cpu: "150m"
      imagePullSecrets:
      - name: tiamat-registry-secret
      restartPolicy: Always
