lab_8/v1/pvc-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-curl
spec:
  containers:
    - name: busybox-curl
      image: yauritux/busybox-curl
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - name: data
          mountPath: /data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: busybox-curl-pvc
  restartPolicy: Always
