lab_8/v1/db_replica.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tiamat-db
spec:
  clusterIP: None
  selector:
    app: tiamat-db
  ports:
    - port: 3306
      name: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tiamat-db
spec:
  serviceName: "tiamat-db"
  replicas: 3
  selector:
    matchLabels:
      app: tiamat-db
  template:
    metadata:
      labels:
        app: tiamat-db
    spec:
      containers:
      - name: mysql
        image: mysql:8
        ports:
          - containerPort: 3306
            name: mysql
        volumeMounts:
          - name: mysql-config
            mountPath: /etc/mysql/conf.d
          - name: mysql-scripts
            mountPath: /scripts
          - name: mysql-pvc
            mountPath: /var/lib/mysql
        command: ["/bin/bash", "/scripts/entrypoint.sh"]
      volumes:
        - name: mysql-config
          configMap:
            name: mysql-config
            items:
              - key: my.cnf
                path: my.cnf
        - name: mysql-scripts
          configMap:
            name: mysql-config
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
  volumeClaimTemplates:
    - metadata:
        name: mysql-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: do-block-storage   
        resources:
          requests:
            storage: 5Gi
