lab_8/v1/mongodb-replica-set.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: "mongo"
  replicas: 3
  selector:
    matchLabels:
      role: mongo
  template:
    metadata:
      labels:
        role: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo:8
        command: ["mongod", "--config", "/etc/mongo/mongod.conf"]
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-config
          mountPath: /etc/mongo
        - name: mongo-data
          mountPath: /data/db
        - name: mongo-logs
          mountPath: /var/log/mongodb
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
      volumes:
      - name: mongo-config
        configMap:
          name: mongo-config
      - name: mongo-logs
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
