lab_8/v1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiamat-fastapi-nginx-ingress
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - caedes.duckdns.org
    secretName: tiamat-fastapi-nginx-tls

  rules:
  - host: caedes.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tiamat-fastapi-nginx-app
            # ingress sends traffic to port 8080 (ClusterIP), which routes to container port 80.
            port:
              number: 8080
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: tiamat-fastapi-nginx-app
            # ingress sends traffic to port 8080 (ClusterIP), which routes to container port 80.
            port:
              number: 8080
      - path: /data
        pathType: Prefix
        backend:
          service:
            name: tiamat-fastapi-nginx-app
            # ingress sends traffic to port 8080 (ClusterIP), which routes to container port 80.
            port:
              number: 8080
